// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SuggestionsList /> when isLoading=false with results renders as expected 1`] = `
<div
  className=
      y-suggestions-list
      y-hc-border
      {
        border-radius: 1px;
        border-width: 0 !important;
        border: none;
        box-shadow: 0 0 12px rgba(0, 0, 0, 0.2) !important;
        width: 280px;
      }
      & > *:first-child {
        padding-top: 4px;
      }
      & > *:last-child {
        padding-bottom: 4px;
      }
>
  <ul
    className=


  >
    <li
      key="groupTitle"
    >
      <ul>
        <li
          key="id"
        >
          <SuggestionsListItem
            description="description"
            id="id"
            imageUrl="imageUrl"
            isSelected={false}
            name="name"
            onSelect={[MockFunction]}
            searchText="searchText"
          />
        </li>
      </ul>
    </li>
  </ul>
</div>
`;

exports[`<SuggestionsList /> when isLoading=false with results when onHover is called updates the state 1`] = `null`;

exports[`<SuggestionsList /> when isLoading=false with results with state.hoveredId=id renders as expected 1`] = `
<div
  className=
      y-suggestions-list
      y-hc-border
      {
        border-radius: 1px;
        border-width: 0 !important;
        border: none;
        box-shadow: 0 0 12px rgba(0, 0, 0, 0.2) !important;
        width: 280px;
      }
      & > *:first-child {
        padding-top: 4px;
      }
      & > *:last-child {
        padding-bottom: 4px;
      }
>
  <ul
    className=


  >
    <li
      key="groupTitle"
    >
      <ul>
        <li
          key="id"
        >
          <SuggestionsListItem
            description="description"
            id="id"
            imageUrl="imageUrl"
            isSelected={false}
            name="name"
            onSelect={[MockFunction]}
            searchText="searchText"
          />
        </li>
      </ul>
    </li>
  </ul>
</div>
`;

exports[`<SuggestionsList /> when isLoading=false with results with state.hoveredId=id when the mouse leaves renders as expected 1`] = `
<div
  className=
      y-suggestions-list
      y-hc-border
      {
        border-radius: 1px;
        border-width: 0 !important;
        border: none;
        box-shadow: 0 0 12px rgba(0, 0, 0, 0.2) !important;
        width: 280px;
      }
      & > *:first-child {
        padding-top: 4px;
      }
      & > *:last-child {
        padding-bottom: 4px;
      }
>
  <ul
    className=


  >
    <li
      key="groupTitle"
    >
      <ul>
        <li
          key="id"
        >
          <SuggestionsListItem
            description="description"
            id="id"
            imageUrl="imageUrl"
            isSelected={false}
            name="name"
            onSelect={[MockFunction]}
            searchText="searchText"
          />
        </li>
      </ul>
    </li>
  </ul>
</div>
`;

exports[`<SuggestionsList /> when isLoading=false without results renders as expected 1`] = `
<div
  className=
      y-suggestions-list
      y-hc-border
      {
        border-radius: 1px;
        border-width: 0 !important;
        border: none;
        box-shadow: 0 0 12px rgba(0, 0, 0, 0.2) !important;
        width: 280px;
      }
>
  <Block
    padding="large"
    textAlign="center"
    textSize="small"
  >
    <Text
      color="metadata"
    >
      noResultsText
    </Text>
  </Block>
</div>
`;

exports[`<SuggestionsList /> when isLoading=true with results renders as expected 1`] = `
<div
  className=
      y-suggestions-list
      y-hc-border
      {
        border-radius: 1px;
        border-width: 0 !important;
        border: none;
        box-shadow: 0 0 12px rgba(0, 0, 0, 0.2) !important;
        width: 280px;
      }
      & > *:first-child {
        padding-top: 4px;
      }
>
  <ul
    className=

        {
          border-bottom: 0.1rem solid #f3f5f8;
          margin-bottom: -1px;
        }
  >
    <li
      key="groupTitle"
    >
      <ul>
        <li
          key="id"
        >
          <SuggestionsListItem
            description="description"
            id="id"
            imageUrl="imageUrl"
            isSelected={false}
            name="name"
            onSelect={[MockFunction]}
            searchText="searchText"
          />
        </li>
      </ul>
    </li>
  </ul>
  <div
    className=

        {
          padding-bottom: 1.4rem;
          padding-left: 0;
          padding-right: 0;
          padding-top: 1.4rem;
        }
  >
    <Spinner
      isCentered={true}
      text="loadingText"
    />
  </div>
</div>
`;

exports[`<SuggestionsList /> when isLoading=true with results when onHover is called updates the state 1`] = `null`;

exports[`<SuggestionsList /> when isLoading=true with results with state.hoveredId=id renders as expected 1`] = `
<div
  className=
      y-suggestions-list
      y-hc-border
      {
        border-radius: 1px;
        border-width: 0 !important;
        border: none;
        box-shadow: 0 0 12px rgba(0, 0, 0, 0.2) !important;
        width: 280px;
      }
      & > *:first-child {
        padding-top: 4px;
      }
>
  <ul
    className=

        {
          border-bottom: 0.1rem solid #f3f5f8;
          margin-bottom: -1px;
        }
  >
    <li
      key="groupTitle"
    >
      <ul>
        <li
          key="id"
        >
          <SuggestionsListItem
            description="description"
            id="id"
            imageUrl="imageUrl"
            isSelected={false}
            name="name"
            onSelect={[MockFunction]}
            searchText="searchText"
          />
        </li>
      </ul>
    </li>
  </ul>
  <div
    className=

        {
          padding-bottom: 1.4rem;
          padding-left: 0;
          padding-right: 0;
          padding-top: 1.4rem;
        }
  >
    <Spinner
      isCentered={true}
      text="loadingText"
    />
  </div>
</div>
`;

exports[`<SuggestionsList /> when isLoading=true with results with state.hoveredId=id when the mouse leaves renders as expected 1`] = `
<div
  className=
      y-suggestions-list
      y-hc-border
      {
        border-radius: 1px;
        border-width: 0 !important;
        border: none;
        box-shadow: 0 0 12px rgba(0, 0, 0, 0.2) !important;
        width: 280px;
      }
      & > *:first-child {
        padding-top: 4px;
      }
>
  <ul
    className=

        {
          border-bottom: 0.1rem solid #f3f5f8;
          margin-bottom: -1px;
        }
  >
    <li
      key="groupTitle"
    >
      <ul>
        <li
          key="id"
        >
          <SuggestionsListItem
            description="description"
            id="id"
            imageUrl="imageUrl"
            isSelected={false}
            name="name"
            onSelect={[MockFunction]}
            searchText="searchText"
          />
        </li>
      </ul>
    </li>
  </ul>
  <div
    className=

        {
          padding-bottom: 1.4rem;
          padding-left: 0;
          padding-right: 0;
          padding-top: 1.4rem;
        }
  >
    <Spinner
      isCentered={true}
      text="loadingText"
    />
  </div>
</div>
`;

exports[`<SuggestionsList /> when isLoading=true without results renders as expected 1`] = `
<div
  className=
      y-suggestions-list
      y-hc-border
      {
        border-radius: 1px;
        border-width: 0 !important;
        border: none;
        box-shadow: 0 0 12px rgba(0, 0, 0, 0.2) !important;
        width: 280px;
      }
>
  <div
    className=

        {
          padding-bottom: 1.4rem;
          padding-left: 0;
          padding-right: 0;
          padding-top: 1.4rem;
        }
  >
    <Spinner
      isCentered={true}
      text="loadingText"
    />
  </div>
</div>
`;
